now display the correct heading over the links of mine recently completed projects. It was stuck over the image orinially

--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,7 @@
 img{
   float: left;
   margin-right: 20px;
+  object-fit: scale-down;
 }
 
 .BF{
